--- a/Bab I - Pendahuluan.tex
+++ b/Bab I - Pendahuluan.tex
@@ -61,7 +61,7 @@ DSRM adalah pendekatan yang berfokus dalam memecahkan masalah dan dirancang untu
 Metodologi DSRM terdiri dari enam tahapan yang dijalankan secara sistematis.
 \begin{enumerate}
     \item \textit{Problem Identification} \\
-    Pada tahapan ini, penulis melakukan eksporasi dalam proses tata kelola AE.
+    Pada tahapan ini, penulis melakukan eksplorasi dalam proses tata kelola AE.
     Tahapan ini dilakukan dengan analisis dokumen terkait tata kelola AE dan melakukan wawancara dengan Tim \textit{Enterprise Architect} Paragon Corp untuk mendapatkan informasi tentang proses tata kelola saat ini.
     Tahapan ini menghasilkan pernyataan masalah yang jelas dan ruang lingkup pengerjaan Tugas Akhir yang difokuskan. \\
 
@@ -74,7 +74,7 @@ Metodologi DSRM terdiri dari enam tahapan yang dijalankan secara sistematis.
     Pada tahapan ini, penulis menentukan \textit{requirement} kemudian merancang solusi berdasarkan \textit{requirement} yang sudah ditentukan.
     Solusi disusun berdasarkan kerangka kerja arsitektur TOGAF untuk memastikan solusi mencakup aspek penting.
     Selain itu, penulis merancang solusi untuk menjawab permasalahan tata kelola AE Paragon Corp.
-    Peracangan dilakukan berdasarkan prinsip-prinsip AE dan standar perusahaan. \\
+    Perancangan dilakukan berdasarkan prinsip-prinsip AE dan standar perusahaan. \\
     
     \item \textit{Demonstration} \\
     Pada tahapan ini, penulis akan menunjukkan bagaimana solusi yang dirancang dapat digunakan dalam konteks perusahaan.
@@ -86,6 +86,6 @@ Metodologi DSRM terdiri dari enam tahapan yang dijalankan secara sistematis.
     Evaluasi ini memberikan masukan untuk melakukan penyempurnaan terhadap solusi. \\
 
     \item \textit{Communication} \\
-    Pada tahapan ini, penulis menyampika hasil solusi yang telah dirancang dan cara solusi tersebut menyelesaikan masalah yang terjadi.
+    Pada tahapan ini, penulis menyampaikan hasil solusi yang telah dirancang dan cara solusi tersebut menyelesaikan masalah yang terjadi.
     Penyampaian ini dilakukan dengan Tim \textit{Enterprise Architect} Paragon Corp dan dosen pembimbing untuk memastikan hasil solusi dapat dipahami dan diterapkan sesuai kebutuhan perusahaan. \\
 \end{enumerate}
