--- a/Bab II - Studi-Literatur.tex
+++ b/Bab II - Studi-Literatur.tex
@@ -19,10 +19,10 @@ Dari berbagai definisi tersebut, disimpulkan bahwa AE berperan sebagai landasan 
 Dengan demikian, AE dapat meningkatkan efisiensi operasional, mengurangi redundansi aplikasi, dan memastikan Teknologi Informasi (TI) tetapi selaras dengan kebutuhan bisnis.
 
 \subsection{Domain Utama Arsitektur \textit{Enterprise}}
-Arsitektur \textit{Enterprise} (AE) dibentuk oleh beberapa kompoenen yang disebut domain arsitektur.
-Domain ini mengategorikan aspek yang harus diperhatikan oleh arsitek untuk merancang sistem yang kompleks \autocite{jager2023getting}.
+Arsitektur \textit{Enterprise} (AE) dibentuk oleh beberapa komponen yang disebut domain arsitektur.
+domain ini mengategorikan aspek yang harus diperhatikan oleh arsitek untuk merancang sistem yang kompleks \autocite{jager2023getting}.
 
-Dalam TOGAF, AE terbagi menjadi empat domain arsitektur yang berfungsi sebagai subsistem dari keleuruhan arsitektur perusahaan.
+Dalam TOGAF, AE terbagi menjadi empat domain arsitektur yang berfungsi sebagai subsistem dari keseluruhan arsitektur perusahaan.
 Pembagian domain ini menjadi struktur utama dalam \textit{Architecture Development Method} (ADM) \autocite{TOGAF_Standard_10th}.
 Gambar \ref{gambar:adm} menunjukkan siklus \textit{Architecture Development Method} (ADM) yang digunakan untuk mengembangkan, mengelola, dan memelihara siklus AE pada organisasi.
 Sementara itu, Gambar \ref{gambar:domain} menunjukkan struktur domain arsitektur AE.
