--- a/Bab III - Analisis-Masalah.tex
+++ b/Bab III - Analisis-Masalah.tex
@@ -32,7 +32,7 @@ Kondisi ini mendorong untuk membentuk Tim \textit{Enterprise Architecture}.
 Pada awal pembentukannya, Paragon Corp menjalin kerja sama dengan konsultan PwC untuk melakukan penilaian terhadap kapabilitas Arsitektur \textit{Enterprise} (AE).
 Hasil penilaian menunjukkan bahwa tingkat \textit{maturity} AE di Paragon Corp berada di level 1. 
 Saat ini, tim masih melakukan pengumpulan data terkait aset Teknologi Informasi (TI) dari berbagai pemangku kepentingan.
-Beriringan dengan tahap ini, akan segera dijalani juga implementasi proses tata kelola AE yag terstruktur untuk memastikan pengembangan TI di Paragon Corp sesuai dengan tujuan yang ditetapkan.
+Beriringan dengan tahap ini, akan segera dijalani juga implementasi proses tata kelola AE yang terstruktur untuk memastikan pengembangan TI di Paragon Corp sesuai dengan tujuan yang ditetapkan.
 
 \section{Analisis Kondisi Tata Kelola Arsitektur \textit{Enterprise} Saat Ini}
 \subsection{Struktur dan Mekanisme Tata Kelola Arsitektur \textit{Enterprise} Saat Ini}
@@ -62,7 +62,7 @@ Alur tata kelola AE terbagi menjadi lima tahap, dengan detail sebagai berikut:
   \textit{High impact} dikategorikan jika perubahannya besar seperti modifikasi proses bisnis utama, pergantian sistem, atau perubahan integrasi kritikal, sedangkan \textit{low impact} dikategorikan jika perubahannya minor seperti modifikasi fitur kecil atau tampilan. \\
 
   \textit{Business Architect} kemudian mendokumentasikan artefak bisnis seperti \textit{business process flow} dan \textit{user flow diagram} pada \textit{platform} SAP LeanIX. 
-  Informasi yang dimasukkan di URS dan SAP LeanIX berupa \textit{current state} dan \textit{desired state} seaat perubahan diimplementasikan.
+  Informasi yang dimasukkan di URS dan SAP LeanIX berupa \textit{current state} dan \textit{desired state} saat perubahan diimplementasikan.
   Semua progres dipantau melalui excel \textit{tracker} untuk memastikan ketercapaian setiap aktivitas pada tahapan \textit{ideation}. 
   Tahap \textit{ideation} ini memastikan seluruh rencana perubahan telah tervalidasi sejak awal sebelum masuk ke tahap \textit{risk and impact}. 
   Gambar \ref{gambar:asis_ideation} menunjukkan tahapan \textit{ideation} saat ini.\\
@@ -227,12 +227,12 @@ Tabel \ref{tbl:KNF} menunjukkan kebutuhan non-fungsional yang menjawab masalah \
 \subsection{Alternatif Solusi}
 Berdasarkan permasalahan yang akan diselesaikan, yaitu pelaksanaan \textit{EA Impact Analysis} yang belum memiliki tata kelola yang jelas.
 Bagian ini merumuskan tiga alternatif solusi yang dapat diterapkan oleh Paragon Corp. 
-Ketiga alternatif ini dirancang setara sehingga depat dibandingkan melalui analisis keputusan pada bagian berikutnya.
+Ketiga alternatif ini dirancang setara sehingga dapat dibandingkan melalui analisis keputusan pada bagian berikutnya.
 \begin{enumerate}
   \item Penyusunan Mekanisme \textit{EA Impact Analysis} yang Didukung SAP LeanIX \\
   Penyusunan mekanisme \textit{EA Impact Analysis} mengacu pada kerangka kerja TOGAF sebagai referensi.
-  TOGAF dipilih karena menyediakan pedoman mengenai elemen-elemen analisis arsitektur, termasuk bagaimana meilai dampak terhadap \textit{domain} bisnis, data, aplikasi, infrastruktur, dan keamanan.
-  Dengan mekanisme ini, perusahaan memiliki kerangka yang jelas dan tidak lagi bergantung kepada interpretai masing-masing tim.\\
+  TOGAF dipilih karena menyediakan pedoman mengenai elemen-elemen analisis arsitektur, termasuk bagaimana meilai dampak terhadap domain bisnis, data, aplikasi, infrastruktur, dan keamanan.
+  Dengan mekanisme ini, perusahaan memiliki kerangka yang jelas dan tidak lagi bergantung kepada interpretasi masing-masing tim.\\
  
   Dalam penerapan solusi ini, proses mekanisme akan didukung oleh \textit{platform} SAP LeanIX untuk mengisi dan menyimpan hasil analisis.
   SAP LeanIX sudah digunakan oleh Paragon Corp sebagai repositori AE sehingga semua analisis terdokumentasi di satu tempat yang dapat diakses semua tim terkait.
@@ -253,7 +253,7 @@ Ketiga alternatif ini dirancang setara sehingga depat dibandingkan melalui anali
 
   Selain \textit{checklist}, \textit{template EA Impact Analysis} disediakan untuk mendokumentasikan hasil analisis.
   \textit{Template} ini memastikan laporan mudah dibaca dan dapat ditinjau oleh Tim \textit{Enterprise Architect}.
-  \textit{Template} dapat memuat bagian-bagian seperti ringkasan inisiatif, \textit{domain} terdampak dan risiko yang ditemukan.\\
+  \textit{Template} dapat memuat bagian-bagian seperti ringkasan inisiatif, domain terdampak dan risiko yang ditemukan.\\
 
   Pendekatan solusi ini dapat diterapkan dengan cepat tanpa memerlukan perubahan besar pada struktur organisasi atau alur proses.
   Solusi ini cocok diterapkan ketika organisasi membutuhkan perbaikan yang cepat, mudah diadopsi, dan tidak membebani tim.
@@ -265,7 +265,7 @@ Ketiga alternatif ini dirancang setara sehingga depat dibandingkan melalui anali
   Pembentukan forum berfokus kepada peninjauan hasil \textit{EA Impact Analysis}.
   Forum berfungsi sebagai mekanisme yang lebih ringkas dan cepat untuk memverifikasi bahwa analisis yang dilakukan sudah benar dan tidak ada aspek penting yang terlewat.
   Forum ini menjadi tempat untuk mengklarifikasi temuan, menilai risiko, dan memastikan bahwa keputusan diambil berdasarkan pemahaman yang lengkap.
-  Forum juga memastikan bahwa seluruh \textit{domain} terdampak sudah ditinjau sesuai kebutuhan.
+  Forum juga memastikan bahwa seluruh domain terdampak sudah ditinjau sesuai kebutuhan.
   Dengan adanya forum ini, hasil analisis dapat diperiksa secara lintas peran sebelum sebuah keputusan dibuat.\\
   
   Solusi ini memperkuat tata kelola AE tanpa membutuhkan perubahan besar pada alur proses.
