--- a/Bab V - Rencana-Selanjutnya.tex
+++ b/Bab V - Rencana-Selanjutnya.tex
@@ -7,13 +7,13 @@
 Tahapan dalam implementasi Tugas Akhir ini dilakukan selama 14 minggu. 
 Penyusunan Tugas Akhir direncanakan berlangsung dari awal Februari 2026 hingga Mei 2026.
 \textit{Timeline} disusun dengan mempertimbangkan aktivitas setiap tahap dan kesesuaian dengan jadwal kalender akademik.
-Tabel \ref{tbl:timeline} menunjukkan detail rencana \textit{implementasi} selama 14 minggu. \\
+Tabel \ref{tbl:timeline} menunjukkan detail rencana implementasi selama 14 minggu. \\
 \input{table/tabelTimeline.tex}
 
 \section{Desain Pengujian dan Evaluasi}
 \subsection{Verifikasi Kesesuaian terhadap Standar TOGAF}
 Tahapan verifikasi dilakukan untuk memastikan mekanisme yang dibuat mengikuti konsep TOGAF.
-Langkah verifikasi dilakukan dengan menyusun \textit{checklist} yang berisi aspek arsitektur yang dianalisis pada setiap \textit{domain}, 
+Langkah verifikasi dilakukan dengan menyusun \textit{checklist} yang berisi aspek arsitektur yang dianalisis pada setiap domain, 
 lalu memeriksa mekanisme yang digunakan telah memuat seluruh aspek tersebut. 
 Keluaran tahap ini berupa \textit{checklist} verifikasi dan catatan koreksi jika ditemukan ketidaksesuaian.
 
