--- a/table/tabelAsIsToBe.tex
+++ b/table/tabelAsIsToBe.tex
@@ -29,10 +29,10 @@
 
 % ====================== ROWS ======================
 
-\textit{Domain yang Terlibat} &
-\textit{Domain} yang dianalisis yaitu \textit{Business, Application,} dan \textit{Data}.  
-Sementara itu, untuk \textit{domain Technology} dan \textit{Security} tidak dianalisis. &
-Seluruh \textit{domain} dianalisis sesuai TOGAF. \\
+Domain yang Terlibat &
+Domain yang dianalisis yaitu \textit{Business, Application,} dan \textit{Data}.  
+Sementara itu, untuk \textit{Technology} dan \textit{Security} tidak dianalisis. &
+Seluruh domain dianalisis sesuai TOGAF. \\
 
 Analisis \textit{Technology Architecture} &
 Tidak disertakan dalam dokumen URS dan harus melihat LeanIX secara manual. &
@@ -46,9 +46,9 @@ Konsolidasi Hasil Analisis &
 Tidak ada dokumen yang menyatukan seluruh hasil analisis &
 Menghasilkan satu dokumen sebagai ringkasan dan rangkuman untuk keputusan hasil proses \textit{EA Impact Analysis}. \\
 
-Peran \textit{Domain Architect} &
-Peran masing-masing \textit{domain} tidak didefinisikan dengan jelas. &
-\textit{domain architect} terdefinisi jelas. \\
+Peran Domain \textit{Architect} &
+Peran masing-masing domain tidak didefinisikan dengan jelas. &
+Domain \textit{architect} terdefinisi jelas. \\
 
 Kelengkapan dan Akurasi &
 Struktur dan proses masih belum jelas. &
