--- a/table/tabelDimensiL3.tex
+++ b/table/tabelDimensiL3.tex
@@ -36,8 +36,8 @@ Proses sudah disosialisasikan melalui dokumen dan SAP LeanIX. Namun, dalam pelak
 
 \textbf{\textit{Architecture Development}} &    
 TRM dan \textit{standards profile} sudah lengkap. Selain itu, \textit{gap analysis} dan rencana migrasi juga sudah selesai dibuat. &
-Dokumentasi arsitektur untuk \textit{domain} bisnis dan aplikasi akan dimulai sejak awal perencanaan inisiatif. 
-Namun, untuk \textit{domain} arsitektur dan keamanan dimulai beriringan berjalannya suatu inisiatif.\\
+Dokumentasi arsitektur untuk domain bisnis dan aplikasi akan dimulai sejak awal perencanaan inisiatif. 
+Namun, untuk domain arsitektur dan keamanan dimulai beriringan berjalannya suatu inisiatif.\\
 
 \textbf{\textit{Business Alignment}} &
 AE sudah menjadi bagian dari proses perencanaan investasi dan pengendalian proyek. &
