--- a/table/tabelEAMM.tex
+++ b/table/tabelEAMM.tex
@@ -46,9 +46,9 @@ Proses terus diperbaiki menggunakan data dan metrik untuk meningkatkan hasil. \\
 
 \textbf{\textit{Architecture Development}} &
 Dokumen dan standar arsitektur belum menyatu. &
-Sudah ada TRM dan \textit{standards profile}. Selain itu, \textit{gap analysis} dan rencana migrasi diterapkan untuk semua \textit{domain} arsitektur. &
+Sudah ada TRM dan \textit{standards profile}. Selain itu, \textit{gap analysis} dan rencana migrasi diterapkan untuk semua domain arsitektur. &
 TRM dan \textit{standards profile} sudah lengkap. Selain itu, \textit{gap analysis} dan rencana migrasi juga sudah selesai dibuat. &
-Dokumentasi arsitektur diperbarui secara rutin dan semua \textit{domain} mengikuti standar yang sama. &
+Dokumentasi arsitektur diperbarui secara rutin dan semua domain mengikuti standar yang sama. &
 Menerapkan mekanisme pengecualian (\textit{waiver}) yang digunakan untuk menjaga dan meningkatkan kualitas pengembangan arsitektur. \\
 
 \textbf{\textit{Business Alignment}} &
