--- a/table/tabelGapEA.tex
+++ b/table/tabelGapEA.tex
@@ -44,9 +44,9 @@ Perbedaan cara kerja antar tim dan belum ada mekanisme kontrol penerapan proses.
 
 \textbf{\textit{Architecture Development}} &
 TRM dan \textit{standards profile} sudah lengkap. Selain itu, \textit{gap analysis} dan rencana migrasi juga sudah selesai dibuat. &
-\textit{Domain} bisnis dan aplikasi mulai terdokumentasi sejak awal. Sementara itu, \textit{domain} data, infrastruktur, dan keamanan terdokumentasi sambil berjalannya suatu inisiatif. &
-Dokumentasi belum dilakukan sejak tahap inisiasi untuk semua \textit{domain}. &
-Belum semua \textit{domain} memiliki kebiasaan dokumentasi awal. \\
+Domain bisnis dan aplikasi mulai terdokumentasi sejak awal. Sementara itu, domain data, infrastruktur, dan keamanan terdokumentasi sambil berjalannya suatu inisiatif. &
+Dokumentasi belum dilakukan sejak tahap inisiasi untuk semua domain. &
+Belum semua domain memiliki kebiasaan dokumentasi awal. \\
 
 \textbf{\textit{Business Alignment}} &
 AE sudah menjadi bagian dari proses perencanaan investasi dan pengendalian proyek. &
