--- a/table/tabelRisiko.tex
+++ b/table/tabelRisiko.tex
@@ -33,7 +33,7 @@ Ketidaksesuaian dengan TOGAF &
 Mekanisme yang dirancang mungkin tidak sepenuhnya sesuai dengan TOGAF. &
 Menggunakan dokumentasi resmi TOGAF sebagai acuan dan membuat \textit{checklist} verifikasi berbasis TOGAF. \\
 
-Perbedaan interpretasi \textit{domain} &
+Perbedaan interpretasi domain &
 Risiko salah menafsirkan arsitektur \textit{Business, Application, Data, Technology}, dan \textit{Security} karena TOGAF memiliki cakupan yang luas. &
 Menyusun definisi setiap elemen berdasarkan referensi TOGAF. \\
 
