--- a/table/tabelTimeline.tex
+++ b/table/tabelTimeline.tex
@@ -34,11 +34,11 @@ Studi literatur mendalam mengenai TOGAF ADM, \textit{Content Metamodel}, dan \te
 Ringkasan referensi TOGAF relevan untuk \textit{EA Impact Analysis}. \\
 
 Minggu 4-6 &
-Perancangan mekanisme \textit{EA Impact Analysis} \textit{To-Be} meliputi alur proses, peran, \textit{input} dan \textit{output}, serta elemen analisis per \textit{domain}. &
+Perancangan mekanisme \textit{EA Impact Analysis} \textit{To-Be} meliputi alur proses, peran, \textit{input} dan \textit{output}, serta elemen analisis per domain. &
 Rancangan mekanisme \textit{EA Impact Analysis To-Be}. \\
 
 Minggu 7-9 &
-Penyusunan \textit{template} analisis per \textit{domain} sesuai TOGAF. &
+Penyusunan \textit{template} analisis per domain sesuai TOGAF. &
 Rancangan \textit{template} domain. \\
 
 Minggu 10-11 &
